--- a/assets/sass/layouts/_cart.scss
+++ b/assets/sass/layouts/_cart.scss
@@ -508,6 +508,10 @@
             .product-content {
                 // padding-left: 0;
                 margin-left: 20px;
+
+                @media (max-width: screen(phablet-lg-max)) {
+                    margin-left: 0;
+                }
             }
         }
     }
