--- a/assets/sass/pages/_product.scss
+++ b/assets/sass/pages/_product.scss
@@ -1100,6 +1100,7 @@ $product-container-padding: 0 50px;
 
                     iframe {
                         display: block;
+                        max-width: 100%;
                         margin: auto;
                     }
                 }
